db-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-test
  namespace: inventory-service
spec:
  containers:
    - name: postgres-client
      image: postgres:14-alpine
      command: ["sh", "-c", "sleep 3600"]
  restartPolicy: Never
