postgres-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgres-test
  namespace: order-service
spec:
  containers:
    - name: postgres-client
      image: postgres:14-alpine
      command: ["sleep", "3600"]
