simple-test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-test-pod
spec:
  nodeSelector:
    kubernetes.io/hostname: ip-172-2-4-80.ec2.internal
  tolerations:
  - key: "node.kubernetes.io/not-ready"
    operator: "Exists"
    effect: "NoSchedule"
  containers:
  - name: alpine
    image: alpine:latest
    command:
      - /bin/sh
      - -c
      - "apk add --no-cache curl iputils && sleep 3600"
